--- a/Properties/launchSettings.json
+++ b/Properties/launchSettings.json
@@ -27,11 +27,11 @@
         "ASPNETCORE_ENVIRONMENT": "Development"
       }
     },
-    "httpsr": {
+    "netlify": {
       "commandName": "Project",
       "dotnetRunMessages": true,
       "launchBrowser": true,
-      "applicationUrl": "https://localhost:7103;http://localhost:5077",
+      "applicationUrl": "http://localhost:5077",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Release"
       }
